# hetzner-auction-watch

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  config.yaml.example  docker-compose.yml  hetzner_watch.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  docs-fix.yml  feature-request.yml  security-incident.yml
.github/rulesets/: main-protection.json
.github/workflows/: ci.yml  security.yml
