[project]
name = "hetzner-auction-watch"
version = "1.0.0"
description = "Notify on Hetzner Server Auction matches via ntfy.sh / Discord"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "DonaldSe" }]
dependencies = [
    "requests>=2.32.0",
    "pyyaml>=6.0.2",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
hetzner-watch = "hetzner_watch:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["hetzner_watch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PL"]
ignore = ["PLR2004", "PLR0913"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
